--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,18 @@
+:root {
+  font-size: 16px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  --text-primary: hsl(0, 0%, 71%);
+  --text-secondary: hsl(0, 0%, 93%);
+  --bg-primary: hsl(240, 14%, 16%);
+  --bg-secondary: hsl(240, 9%, 9%);
+  --transition-speed: 600ms;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  color: hsl(240, 9%, 9%);
+  background-color: hsl(0, 0%, 100%);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
